<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="194dp"
        android:layout_height="181dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_trophy"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/denis"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_score_is_0_out_of_10"
        android:textColor="@color/lightGrey"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/white"
        android:layout_margin="15dp"/>



</LinearLayout>