<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestionsActivity"
    android:background="@color/white"
    android:fillViewport="true">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_question"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_margin="10dp"
            tools:text="What country does this flag belong to ?"/>


        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/quiz_image"
            tools:src="@drawable/ic_flag_of_germany"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:indeterminate="false"
                android:layout_width="0dp"
                android:progressBackgroundTint="@color/lightGrey"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"/>

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/_0_10"
                android:textColor="@color/black"
                android:textSize="14sp"/>




        </LinearLayout>

        <TextView
            android:id="@+id/tv_optionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            tools:text="Apple"
            android:textSize="18sp"
            android:textColor="#7A8089"
            android:background="@drawable/default_option_border_bg"/>
        <TextView
            android:id="@+id/tv_optionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            tools:text="Apple"
            android:textSize="18sp"
            android:textColor="#7A8089"
            android:background="@drawable/default_option_border_bg"/>
        <TextView
            android:id="@+id/tv_optionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            tools:text="Apple"
            android:textSize="18sp"
            android:textColor="#7A8089"
            android:background="@drawable/default_option_border_bg"/>
        <TextView
            android:id="@+id/tv_optionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            tools:text="Apple"
            android:textSize="18sp"
            android:textColor="#7A8089"
            android:background="@drawable/default_option_border_bg"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@color/design_default_color_primary"/>



    </LinearLayout>


</ScrollView>